// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayNote matches snapshot 1`] = `
.c2 {
  overflow: visible;
  position: relative;
}

.c4 {
  color: #c5c5c5;
  height: 4.2rem;
  width: 4.2rem;
  padding: 1.6rem;
  display: none;
  position: absolute;
  top: 0;
  right: 0;
}

.c0 {
  width: 20rem;
  overflow: visible;
  background: #f5f5f5;
}

.c0 > label {
  display: none;
  color: #424242;
  color: #fed200;
  font-size: 1.4rem;
  line-height: 2rem;
  margin: 1.2000000000000002rem 0 0 1.6rem;
}

.c0 .c1 {
  position: absolute;
  top: 0.8rem;
  right: -0.2rem;
}

.c0 .c1 .focus-within .c3 {
  color: #5e6062;
}

.c0 .c1:focus-within .c3 {
  color: #5e6062;
}

@media screen and (max-width:75em) {
  .c0 {
    margin-left: 8rem;
  }
}

@media screen and (max-width:50em) {
  .c0 {
    margin-left: 0;
  }
}

<div
  aria-labelledby="display-note-undefined"
  className="c0"
  data-highlight-card={true}
  focus={[MockFunction]}
  role="dialog"
  tabIndex={-1}
>
  <div
    className="c1 c2"
  >
    <button
      aria-expanded={false}
      aria-label="Actions"
      className="plain-button dot-menu-toggle dropdown-toggle "
      data-no-card-activate={true}
      onClick={[Function]}
    >
      <div
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="dot-menu-icon c3 "
          viewBox="0 0 192 512"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
  </div>
  <svg
    aria-hidden="true"
    className="c4"
    focusable="false"
    height="15px"
    onClick={[MockFunction]}
    version="1.1"
    viewBox="0 0 15 15"
    width="15px"
  >
    <g
      fill="none"
      fillRule="evenodd"
      stroke="none"
      strokeWidth="1"
    >
      <g
        fill="currentColor"
        transform="translate(-302.000000, -18.000000)"
      >
        <g
          transform="translate(302.000000, 18.000000)"
        >
          <path
            d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
          />
        </g>
      </g>
    </g>
  </svg>
  <label>
    Note:
  </label>
  <div
    id="display-note-undefined"
    isActive={false}
    mock-truncated-text={true}
    onChange={[Function]}
  />
</div>
`;

exports[`DisplayNote matches snapshot when focused 1`] = `
.c2 {
  overflow: visible;
  position: relative;
}

.c4 {
  color: #c5c5c5;
  height: 4.2rem;
  width: 4.2rem;
  padding: 1.6rem;
  display: none;
  position: absolute;
  top: 0;
  right: 0;
}

.c5 .c1 {
  position: absolute;
  top: 0.8rem;
  right: -0.2rem;
}

.c5 .c1 .focus-within .c3 {
  color: #5e6062;
}

.c5 .c1:focus-within .c3 {
  color: #5e6062;
}

.c0 {
  width: 20rem;
  overflow: visible;
  background: #f5f5f5;
  background: #fff;
}

.c0 > label {
  display: none;
  color: #424242;
  color: #fed200;
  font-size: 1.4rem;
  line-height: 2rem;
  margin: 1.2000000000000002rem 0 0 1.6rem;
}

.c0 .c1 {
  position: absolute;
  top: 0.8rem;
  right: -0.2rem;
}

.c0 .c1 .focus-within .c3 {
  color: #5e6062;
}

.c0 .c1:focus-within .c3 {
  color: #5e6062;
}

@media screen and (max-width:75em) {
  .c0 {
    margin-left: 8rem;
  }
}

@media screen and (max-width:50em) {
  .c0 {
    margin-left: 0;
  }
}

<div
  aria-labelledby="display-note-undefined"
  className="c0"
  data-highlight-card={true}
  focus={[MockFunction]}
  role="dialog"
  tabIndex={-1}
>
  <div
    className="c1 c2"
  >
    <button
      aria-expanded={false}
      aria-label="Actions"
      className="plain-button dot-menu-toggle dropdown-toggle "
      data-no-card-activate={true}
      onClick={[Function]}
    >
      <div
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="dot-menu-icon c3 "
          viewBox="0 0 192 512"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
  </div>
  <svg
    aria-hidden="true"
    className="c4"
    focusable="false"
    height="15px"
    onClick={[MockFunction]}
    version="1.1"
    viewBox="0 0 15 15"
    width="15px"
  >
    <g
      fill="none"
      fillRule="evenodd"
      stroke="none"
      strokeWidth="1"
    >
      <g
        fill="currentColor"
        transform="translate(-302.000000, -18.000000)"
      >
        <g
          transform="translate(302.000000, 18.000000)"
        >
          <path
            d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
          />
        </g>
      </g>
    </g>
  </svg>
  <label>
    Note:
  </label>
  <div
    id="display-note-undefined"
    isActive={true}
    mock-truncated-text={true}
    onChange={[Function]}
  />
</div>
`;

exports[`DisplayNote matches snapshot when focused with opened dropdown 1`] = `
.c2 {
  overflow: visible;
  position: relative;
}

.c4 {
  color: #c5c5c5;
  height: 4.2rem;
  width: 4.2rem;
  padding: 1.6rem;
  display: none;
  position: absolute;
  top: 0;
  right: 0;
}

.c5 .c1 {
  position: absolute;
  top: 0.8rem;
  right: -0.2rem;
}

.c5 .c1 .focus-within .c3 {
  color: #5e6062;
}

.c5 .c1:focus-within .c3 {
  color: #5e6062;
}

.c0 {
  width: 20rem;
  overflow: visible;
  background: #f5f5f5;
  background: #fff;
}

.c0 > label {
  display: none;
  color: #424242;
  color: #fed200;
  font-size: 1.4rem;
  line-height: 2rem;
  margin: 1.2000000000000002rem 0 0 1.6rem;
}

.c0 .c1 {
  position: absolute;
  top: 0.8rem;
  right: -0.2rem;
}

.c0 .c1 .focus-within .c3 {
  color: #5e6062;
}

.c0 .c1:focus-within .c3 {
  color: #5e6062;
}

@media screen and (max-width:75em) {
  .c0 {
    margin-left: 8rem;
  }
}

@media screen and (max-width:50em) {
  .c0 {
    margin-left: 0;
  }
}

<div
  aria-labelledby="display-note-undefined"
  className="c0"
  data-highlight-card={true}
  focus={[MockFunction]}
  role="dialog"
  tabIndex={-1}
>
  <div
    className="c1 c2"
  >
    <button
      aria-expanded={true}
      aria-label="Actions"
      className="plain-button dot-menu-toggle dropdown-toggle "
      data-no-card-activate={true}
      onClick={[Function]}
    >
      <div
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="dot-menu-icon c3 "
          viewBox="0 0 192 512"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <div
      className="dropdown-menu display-note-menu"
    >
      <menu
        className="dropdown-list "
      >
        <li>
          <button
            onClick={[Function]}
            onMouseEnter={[Function]}
            tabIndex={0}
            type="button"
          >
            Edit
          </button>
        </li>
        <li>
          <button
            onClick={[Function]}
            onMouseEnter={[Function]}
            tabIndex={0}
            type="button"
          >
            Delete
          </button>
        </li>
      </menu>
    </div>
  </div>
  <svg
    aria-hidden="true"
    className="c4"
    focusable="false"
    height="15px"
    onClick={[MockFunction]}
    version="1.1"
    viewBox="0 0 15 15"
    width="15px"
  >
    <g
      fill="none"
      fillRule="evenodd"
      stroke="none"
      strokeWidth="1"
    >
      <g
        fill="currentColor"
        transform="translate(-302.000000, -18.000000)"
      >
        <g
          transform="translate(302.000000, 18.000000)"
        >
          <path
            d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
          />
        </g>
      </g>
    </g>
  </svg>
  <label>
    Note:
  </label>
  <div
    id="display-note-undefined"
    isActive={true}
    mock-truncated-text={true}
    onChange={[Function]}
  />
</div>
`;
